--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -16,3 +16,21 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/related-items";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+.rpr-listing__filters-container {
+  background-color: govuk-colour("light-grey");
+  padding: 1rem;
+}
+
+.rpr-listing__profession-title:link {
+  text-decoration: none;
+}
+
+.rpr-listing__profession-title:hover {
+  text-decoration: underline;
+}
+
+.rpr-listing__profession-summary-list dt, 
+.rpr-listing__profession-summary-list dd {
+  padding: 2px 0;
+}
