--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,12 +20,23 @@
       <h3 class="govuk-heading-m">
         Public facing interface
       </h3>
-      <a href="beta-sprint-2/public-facing/" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
-        Version 1
-        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-        </svg>
-      </a>
+      <p>There are two flows. We want to verify with users with one is preferred.</p>
+      <div>
+        <a href="beta-sprint-2/public-facing-v1/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          User flow 1
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+      <div>
+        <a href="beta-sprint-2/public-facing-v2/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          User flow 2
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
 
     </div>
   </div>
