Chaning section titles to uppercase

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -44,3 +44,7 @@ $govuk-assets-path: '/govuk/assets/';
 .rpr-listing__profession-summary-list dd {
   padding: 2px 0;
 }
+
+.rpr-details__section-title {
+  text-transform: uppercase;
+}
