--- a/app/views/beta-sprint-2/public-facing-v1/profession-1-plastic-surgery.html
+++ b/app/views/beta-sprint-2/public-facing-v1/profession-1-plastic-surgery.html
@@ -27,7 +27,7 @@
 
       {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 
-      <h2 class="govuk-heading-m">
+      <h2 class="govuk-heading-m rpr-details__section-title">
         Overview
       </h2>
 
@@ -55,7 +55,7 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <h2 class="govuk-heading-m">
+      <h2 class="govuk-heading-m rpr-details__section-title">
         Regulatory / professional bodies
       </h2>
 
@@ -115,7 +115,7 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
   
-      <h2 class="govuk-heading-m">
+      <h2 class="govuk-heading-m rpr-details__section-title">
         Regulated activities
       </h2>
 
@@ -143,7 +143,7 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <h2 class="govuk-heading-m">
+      <h2 class="govuk-heading-m rpr-details__section-title">
         Qualification information
       </h2>
 
@@ -195,7 +195,7 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <h2 class="govuk-heading-m">
+      <h2 class="govuk-heading-m rpr-details__section-title">
         Legislation
       </h2>
 
