--- a/app/views/beta-sprint-2/public-facing-v2/professions-filters-only.html
+++ b/app/views/beta-sprint-2/public-facing-v2/professions-filters-only.html
@@ -26,7 +26,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <div class="">
-        <form action="listing-1" method="post" class="form">
+        <form action="professions-listing-1" method="post" class="form">
           {% from "govuk/components/input/macro.njk" import govukInput %}
 
           {{ govukInput({
