--- a/app/views/beta-sprint-2/public-facing-v2/professions-listing-1.html
+++ b/app/views/beta-sprint-2/public-facing-v2/professions-listing-1.html
@@ -26,7 +26,7 @@
     <div class="govuk-grid-column-one-third">
 
       <div class="rpr-listing__filters-container">
-        <form action="listing-2" method="post" class="form">
+        <form action="professions-listing-2" method="post" class="form">
           {% from "govuk/components/input/macro.njk" import govukInput %}
 
           {{ govukInput({
@@ -202,7 +202,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -248,7 +248,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -294,7 +294,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -340,7 +340,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -386,7 +386,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -432,7 +432,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -478,7 +478,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -524,7 +524,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -570,7 +570,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -616,7 +616,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -662,7 +662,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
@@ -708,7 +708,7 @@
         </h2>
 
         {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-list__profession-summary-list',
+          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
