--- a/app/views/beta-sprint-2/public-facing-v2/professions-select-service.html
+++ b/app/views/beta-sprint-2/public-facing-v2/professions-select-service.html
@@ -20,7 +20,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="professions-filters-only" method="post" class="form">
+      <form action="selected-service" method="post" class="form">
       {{ govukRadios({
         idPrefix: "which-service",
         name: "which-service",
