--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
       <h3 class="govuk-heading-m">
         Public facing interface
       </h3>
-      <p>There are two flows. We want to verify with users with one is preferred.</p>
+      <p>User flow 1 will show users an unrefined listing of results at the first place even though users may not have provided search keywords or anything in the filters.</p>
       <div>
         <a href="beta-sprint-2/public-facing-v1/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           User flow 1
@@ -29,6 +29,7 @@
           </svg>
         </a>
       </div>
+      <p>User flow 2 will show users a filter-only page first. Listing pages will only appear after.</p>
       <div>
         <a href="beta-sprint-2/public-facing-v2/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           User flow 2
