Add the clear data button to the homepage

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,13 +14,29 @@
         BEIS RPR prototype
       </h1>
 
+      <p>Please remember to clear the data when you want to start the prototype again in a clean way.</p>
+
+      <div>
+        <a href="/prototype-admin/clear-data" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+          Clear data
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+  
+
       <h2 class="govuk-heading-l">
         Beta sprint 2
       </h2>
       <h3 class="govuk-heading-m">
         Public facing interface
       </h3>
+
       <p>User flow 1 will show users an unrefined listing of results at the first place even though users may not have provided search keywords or anything in the filters.</p>
+
       <div>
         <a href="beta-sprint-2/public-facing-v1/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           User flow 1
@@ -29,7 +45,9 @@
           </svg>
         </a>
       </div>
+
       <p>User flow 2 will show users a filter-only page first. Listing pages will only appear after.</p>
+
       <div>
         <a href="beta-sprint-2/public-facing-v2/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           User flow 2
