--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
   
 
-      <h2 class="govuk-heading-l">
+      <h2 class="govuk-heading-l" id="beta-sprint-2">
         Beta sprint 2
       </h2>
       <h3 class="govuk-heading-m">
