--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,7 +26,37 @@
       </div>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  
+
+      <h2 class="govuk-heading-l" id="beta-sprint-3">
+        Beta sprint 3
+      </h2>
+      <h3 class="govuk-heading-m">
+        Public facing interface
+      </h3>
+
+      <p>User flow 1 will show users an unrefined listing of results at the first place even though users may not have provided search keywords or anything in the filters.</p>
+
+      <div>
+        <a href="beta-sprint-3/public-facing-v1/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          User flow 1
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>User flow 2 will show users a filter-only page first. Listing pages will only appear after.</p>
+
+      <div>
+        <a href="beta-sprint-3/public-facing-v2/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          User flow 2
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h2 class="govuk-heading-l" id="beta-sprint-2">
         Beta sprint 2
