--- a/app/views/beta-sprint-3/public-facing-v2/profession-2-registered-gas-engineer.html
+++ b/app/views/beta-sprint-3/public-facing-v2/profession-2-registered-gas-engineer.html
@@ -98,10 +98,10 @@
           },
           {
             key: {
-              text: "Mandatory registration with professional bodies"
+              text: "Registration with regulator is"
             },
             value: {
-              text: "Yes"
+              text: "Voluntary"
             }
           }
         ]
