adding the skeleton of ra user flow

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,34 @@
         </a>
       </div>
 
+      <h3 class="govuk-heading-m">
+        Internal user interface
+      </h3>
+
+      <p>This is the prototype for General Medical Council users</p>
+
+      <div>
+        <a href="beta-sprint-3/ra-user-flow-1-with-approval/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as a General Medical Council user
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <!--
+      <p>This is the prototype for BEIS / UKCPQ users</p>
+
+      <div>
+        <a href="beta-sprint-3/internal-user-flow-2/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as a BEIS / UKCPQ user
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+      -->
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h2 class="govuk-heading-l" id="beta-sprint-2">
