--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -28,6 +28,37 @@ $govuk-assets-path: '/govuk/assets/';
   overflow-y: auto;
 }
 
+.rpr-internal__listing {
+  .govuk-width-container {
+    max-width: 1200px;
+  }
+}
+
+.rpr-internal-listing__filters-container {
+  background-color: govuk-colour("light-grey");
+  padding: 1rem;
+
+  .govuk-details__text {
+    border: 0;
+  }
+
+  .govuk-details {
+    margin-bottom: 0;
+  }
+}
+
+.rpr-internal-listing__filter {
+  background-color: govuk-colour("white");
+  height: 180px;
+  overflow-y: auto
+}
+
+.rpr-internal-listing__filter-button {
+  margin-bottom: 10px;
+  background-color: govuk-colour("black");
+  color: govuk-colour("white");
+}
+
 .rpr-listing__search-criteria-container {
   margin-bottom: 5px;
 }
